# coin_selection_algorithms

./: Normal.py  NormalPlotOnly.py  NormalPoisson.py  Poisson.py  PoissonPlotOnly.py  README.md  adjustedPlotNormalPoisson.py  pyproject.toml  var12_pois.pkl
basic/: RndDrw.py  RndImp.py
primitive/: FIFO_ani.py  HVF2.py  HVF3.py  HVF_ani.py  LIFO_ani.py  LVF_ani.py  greedy.py  main.py  main2.py
